--- a/boletin.html
+++ b/boletin.html
@@ -15,16 +15,16 @@
     <style>
       :root {
         color-scheme: light;
-        --bg: #0f172a;
-        --panel: rgba(15, 23, 42, 0.86);
-        --panel-border: rgba(255, 255, 255, 0.08);
-        --headline: #f8fafc;
-        --text: #e2e8f0;
-        --muted: rgba(226, 232, 240, 0.82);
-        --accent: #fbbf24;
-        --accent-soft: rgba(251, 191, 36, 0.16);
+        --bg: linear-gradient(135deg, #ffffff, #f5f5f5 38%, #ececec 100%);
+        --panel: rgba(255, 255, 255, 0.94);
+        --panel-border: rgba(15, 23, 42, 0.08);
+        --headline: #111827;
+        --text: #1f2937;
+        --muted: rgba(75, 85, 99, 0.84);
+        --accent: #dc2626;
+        --accent-soft: rgba(220, 38, 38, 0.08);
         --radius: 28px;
-        --shadow: 0 22px 45px rgba(15, 23, 42, 0.45);
+        --shadow: 0 25px 55px rgba(15, 23, 42, 0.12);
       }
 
       * {
@@ -35,7 +35,7 @@
         margin: 0;
         min-height: 100vh;
         font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
-        background: radial-gradient(circle at top, #1f2937, #0f172a 65%);
+        background: var(--bg);
         color: var(--text);
         display: flex;
         align-items: center;
@@ -50,12 +50,34 @@
         border-radius: var(--radius);
         padding: clamp(2.4rem, 3vw, 3.4rem);
         box-shadow: var(--shadow);
-        backdrop-filter: blur(20px);
       }
 
       header {
         text-align: center;
         margin-bottom: clamp(2rem, 4vw, 3.6rem);
+        display: grid;
+        gap: 1.4rem;
+      }
+
+      .brand {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 1.25rem;
+      }
+
+      .brand img {
+        width: clamp(82px, 12vw, 122px);
+        height: auto;
+        filter: drop-shadow(0 8px 16px rgba(15, 23, 42, 0.12));
+      }
+
+      .brand span {
+        font-weight: 700;
+        font-size: clamp(1.15rem, 2vw, 1.4rem);
+        text-transform: uppercase;
+        letter-spacing: 0.28em;
+        color: var(--accent);
       }
 
       header h1 {
@@ -63,7 +85,7 @@
         font-size: clamp(2.2rem, 3.6vw, 3.1rem);
         letter-spacing: 0.12em;
         text-transform: uppercase;
-        color: var(--accent);
+        color: var(--headline);
       }
 
       header p {
@@ -82,12 +104,14 @@
       section {
         border-radius: clamp(20px, 3vw, 26px);
         border: 1px solid rgba(248, 250, 252, 0.08);
-        background: rgba(15, 23, 42, 0.78);
+        background: rgba(255, 255, 255, 0.94);
         padding: clamp(1.6rem, 2.5vw, 2.4rem);
         display: grid;
         grid-template-columns: auto 1fr;
         gap: clamp(1rem, 2vw, 1.6rem);
         align-items: center;
+        box-shadow: inset 0 1px 0 rgba(15, 23, 42, 0.05),
+          0 14px 28px rgba(15, 23, 42, 0.08);
       }
 
       .icon-wrapper {
@@ -98,7 +122,7 @@
         height: clamp(86px, 10vw, 110px);
         border-radius: 28px;
         background: var(--accent-soft);
-        border: 1px solid rgba(251, 191, 36, 0.35);
+        border: 1px solid rgba(220, 38, 38, 0.35);
       }
 
       .icon-wrapper i {
@@ -112,6 +136,18 @@
         color: var(--headline);
         letter-spacing: 0.08em;
         text-transform: uppercase;
+        position: relative;
+        padding-bottom: 0.6rem;
+      }
+
+      .content h2::after {
+        content: "";
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        width: clamp(50px, 20%, 88px);
+        height: 3px;
+        background: linear-gradient(90deg, var(--accent), transparent);
       }
 
       .content p {
@@ -168,12 +204,21 @@
         li i {
           margin: 0 auto;
         }
+
+        .content h2::after {
+          left: 50%;
+          transform: translateX(-50%);
+        }
       }
     </style>
   </head>
   <body>
     <main>
       <header>
+        <div class="brand">
+          <img src="https://pruebas.franqui.club/ess.png" alt="Prevención Franquicias Internacionales" />
+          <span>Seguridad Ess</span>
+        </div>
         <h1>Prevención Franquicias Internacionales</h1>
         <p>
           Traslados nocturnos seguros de casa al trabajo y regreso. Objetivo:
